Attempt to fix tables with long horizontal scroll

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -21,18 +21,8 @@
     max-width: 925px !important;
 }
 
-/* Temporary fix to address table cells not wrapping */
+/* Fix to address table cells not wrapping */
 
-/* Fix missing line-wrapping with Sphinx-RTD theme */
-/* https://rackerlabs.github.io/docs-rackspace/tools/rtd-tables.html */
-
-/* override table width restrictions */
-/* @media screen and (min-width: 767px) {
-    .wy-table-responsive table td {
-       white-space: normal !important;
-    }
- 
-    .wy-table-responsive {
-       overflow: visible !important;
-    }
-}*/
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal !important;
+}
